# daily-trending

./: .gitignore  README.md  pyproject.toml
.github/workflows/: trending.yml
trending/: __main__.py  gh.py  tg.py
