[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Frost Ming", email = "mianghong@gmail.com"},
]
dependencies = [
    "requests~=2.25",
    "lxml~=4.6",
    
]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
